--- a/report/finalReport.tex
+++ b/report/finalReport.tex
@@ -18,7 +18,7 @@
 \usepackage{lipsum} % for the mock text
 \usepackage{mdframed}
 
-\title{Twitter sentiment blablabla 
+\title{Twitter sentiment analysis with RNTN and SVM 
 \thanks{This is the final project report for CS 388 Natural Language Processing at The University of Texas at Austin in  2014 Spring}}
 \author{Yun Wu \qquad Qiren Chen \qquad Xiaofan Lu \\
   University of Texas at Austin \\
