--- a/report/abstract.tex
+++ b/report/abstract.tex
@@ -1,9 +1,6 @@
 \begin{abstract}
-  This document contains the instructions for preparing a camera-ready
-  manuscript for the proceedings of ACL-2014. The document itself
-  conforms to its own specifications, and is therefore an example of
-  what your manuscript should look like. These instructions should be
-  used for both papers submitted for review and for final versions of
-  accepted papers.  Authors are asked to conform to all the directions
-  reported in this document.
+    In this project, we address the issue of sentiment analysis of twitter message. 
+We collected and preprocessed three types of corpus. Two models,     
+Recursive Neural Tensor Network (RNTN) and Support Vector Machine(SVM)
+are evaluated by extensive experiment. 
 \end{abstract}
