--- a/report/conclusion.tex
+++ b/report/conclusion.tex
@@ -3,4 +3,4 @@
 Better parser needed. 
 
 \section*{Acknowledgments}
-We would like to thanks Dr. Mooney and our TA Zihao Zhou for their guidance and help on this course project. 
+We would like to thank Dr. Mooney and our TA Zihao Zhou for their guidance and help on this course project. 
