--- a/report/abstract.tex
+++ b/report/abstract.tex
@@ -1,6 +1,6 @@
 \begin{abstract}
     In this project, we address the issue of sentiment analysis of twitter message. 
-We collected and preprocessed three types of corpus. Two models,     
-Recursive Neural Tensor Network (RNTN) and Support Vector Machine(SVM)
+We collected and preprocessed three types of corpus. Two models, Support Vector Machine(SVM) and  
+Recursive Neural Tensor Network (RNTN) 
 are evaluated by extensive experiment. 
 \end{abstract}
