--- a/report/conclusion.tex
+++ b/report/conclusion.tex
@@ -1,6 +1,11 @@
 \section{Conclusion}
-\label{sec:length}
-Better parser needed. 
+\label{sec:conclusion}
+In this project, we evaluate both SVM and RNTN model on the task of twitter sentiment analysis. With the same setup, RNTN model perform better than SVM model. However, due to the lack of the annotated corpus (parse tree with sentiment label) over twitter message, RNTN model has worse performance than  SVM model on sentiment decision over general topic tweet. Domain adaptation of RNTN model from movie review to twitter message gives no significant improvement. 
+
+
+
+
+ 
 
 \section*{Acknowledgments}
 We would like to thank Dr. Mooney and our TA Zihao Zhou for their guidance and help on this course project. 
