--- a/report/definition.tex
+++ b/report/definition.tex
@@ -1,4 +1,6 @@
 \section{Problem Definition and Algorithm}
+\label{sec:def}
+
 \subsection{Task Definition}
 In this paper, we address the problem of sentiment analysis of Twitter message. To be more precise, 
 given a message, we want to classify whether the message is of positive or negative (binary decision), or neutral sentiment (ternary decision). For messages conveying both a positive and negative sentiment, whichever is the stronger sentiment should be chosen. For the following two example message, we are expected to return positive on the first one and negative on the second. 
