--- a/report/intro.tex
+++ b/report/intro.tex
@@ -10,8 +10,9 @@ Most of existing works of sentiment analysis are based on bag of words classifie
 
 Recursive Neural Tensor Network (RNTN) model is recently proposed to capture the compositional effects with higher accuracy. Recursive Neural Tensor Networks take as input phrases of any length. They represent a phrase through word vectors and a parse tree and then compute vectors for higher nodes in the tree using the same tensor-based composition function. \cite{Socher:2013}. The authors claim that RNTN can accurately captures the sentiment change and scope of negation. However, the data set used in the above paper is a bunch of single sentences extracted from well formatted movie reviews, which is quite different from twitter message. We also explore the possibility of domain adaptation of RNTN sentiment model. 
 
-In this paper, we evaluate both bag-of-word model and RNTN model on twitter message to compare the performance of both models. We collect twitter message from different sources and labeled some of them. Such corpus has been pre-processed according to the natural of different models. Experiment results indicates that RNTN perform significantly better on well formatted movie reviews than SVM. When training on \textit{Sentiment Treebank} and testing on general topic tweet, RNTN still perform slightly better. However, due the lack the annotated training set on twitter message, existing RNTN model fails outperform in SVM on the task of sentiment detecting on general topic tweet. 
+In this paper, we evaluate both bag-of-word model and RNTN model on twitter message to compare the performance of both models. We collect twitter message from different sources and labeled some of them. Such corpus has been pre-processed according to the natural of different models. Experiment results indicates that RNTN perform significantly better on well formatted movie reviews than SVM. When training on \textit{Sentiment Treebank} and testing on general topic tweet, RNTN still perform slightly better. However, due the lack the annotated training set on twitter message, existing RNTN model fails outperform in SVM on the task of sentiment detecting on general topic tweet. In the end, we also explore the possibility of domain adaptation over RNTN model.  
+\newpage
 
 
-The paper is organized as follows. Section 2 defines the task we are solving and explains our approach. 
-Section 3 presents and discusses experiment results. Section 4 details related work and Section 5 concludes the paper.
+The paper is organized as follows. Section \ref{sec:def} defines the task we are solving and explains our approach. 
+Section \ref{sec:exp} presents and discusses experiment results. Section \ref{sec:related} and Section \ref{sec:future} details related and future work. Section \ref{sec:conclusion} concludes the paper.
